fix(Classy) combobox dropdown alignment

--- a/src/resources/packages/classy/style.pcss
+++ b/src/resources/packages/classy/style.pcss
@@ -1019,7 +1019,8 @@
 
 		.components-form-token-field__suggestions-list {
 			position: absolute;
-			top: 40px;
+			top: 46px;
+			left: 0;
 			background-color: var(--tec-color-gutenberg-white);
 			border: 1px solid var(--tec-color-gutenberg-grey-600);
 
